--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
       <h2>Nike privacy policy</h2>
     </footer>
     <div id="contact">
-      <h2>Made by Manish</h2>
-      <h2>Contact: 9870722406</h2>
-      <h2>Gmail: manishpaliwal847@gmail</h2>
+      <h2>Made by Divyam</h2>
+      <h2>Contact: 1234567890</h2>
+      <h2>Gmail: thedivyambira5@gmail</h2>
     </div>
   </body>
 </html>
